Update mod version to 2.0.0, introduce new Recycle block and associated mechanics, enhance Engineer profession functionalities, and improve localization for new items and commands. Refactor shop and profession command systems for better usability and clarity.